objects/ASI_TH_CRM_PaymentRequest__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_P_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>A&amp;P Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Achievement__c</fullName>
        <label>Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Generate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_PO_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto PO Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CDP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestsFjG3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Adjustment__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approval_Status__c</fullName>
        <description>used for reporting purpose only</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_BRSF_End_Date__c</fullName>
        <label>BRSF End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_BRSF_Start_Date__c</fullName>
        <label>BRSF Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Bottle_Collection_Rate__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Bottle Collection Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Business_License_Qualify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business License Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel__c</fullName>
        <formula>ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Sub_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Completion_Rate_Conv__c</fullName>
        <label>Completion Rate (Conv)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Currency__c</fullName>
        <formula>TEXT( ASI_TH_CRM_Contract__r.ASI_CRM_CN_Currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division__c</fullName>
        <formula>ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_First_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_BRSF_Amount__c</fullName>
        <label>JDE Total BRSF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_Other_Amount__c</fullName>
        <label>JDE Total Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_PSF_Amount__c</fullName>
        <label>JDE Total PSF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_Payment_Amount__c</fullName>
        <label>JDE Total Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Approved_By__c</fullName>
        <label>Last Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Approved_Date__c</fullName>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_RBA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last RBA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestsFRiT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Recall_By__c</fullName>
        <label>Last Recall By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Recall_Date__c</fullName>
        <label>Last Recall Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Rejected_By__c</fullName>
        <label>Last Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Rejected_Date__c</fullName>
        <label>Last Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Submitted_By__c</fullName>
        <label>Last Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Submitted_Date__c</fullName>
        <label>Last Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Year_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Year Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_No_of_Month__c</fullName>
        <formula>if((NOT(ISBLANK(ASI_CRM_CN_BRSF_End_Date__c)) &amp;&amp; NOT(ISBLANK(ASI_CRM_CN_BRSF_Start_Date__c ))),(YEAR( ASI_CRM_CN_BRSF_End_Date__c )*12+MONTH(ASI_CRM_CN_BRSF_End_Date__c ))-
(YEAR( ASI_CRM_CN_BRSF_Start_Date__c )*12+MONTH(ASI_CRM_CN_BRSF_Start_Date__c ))+1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Other_Reason__c</fullName>
        <label>Other Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_OutletWS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet/WS</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please select Outlet</errorMessage>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (SG), Wholesaler (SG)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG Payment Request, ASI CRM SG Payment Request Read-Only</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM SG Payment Request, ASI CRM SG Payment Request Read-Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Overpayment_Comment__c</fullName>
        <label>Overpayment Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Overpayment_Reason__c</fullName>
        <label>Overpayment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>消费者酒瓶外带</fullName>
                </value>
                <value>
                    <fullName>(除杰卡斯,贺兰山,云咸以外的)葡萄酒不收瓶</fullName>
                </value>
                <value>
                    <fullName>店家存酒</fullName>
                </value>
                <value>
                    <fullName>库存消耗</fullName>
                </value>
                <value>
                    <fullName>店家陈列酒</fullName>
                </value>
                <value>
                    <fullName>特定店家，使用店家进货量支付回瓶费</fullName>
                </value>
                <value>
                    <fullName>特定店家，做用店​​家进货量支付回瓶费</fullName>
                </value>
                <value>
                    <fullName>偏远地区Sancon无法收瓶</fullName>
                </value>
                <value>
                    <fullName>其他－需填写具体原因</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Owner_Manager_ID__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_End_Date__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_CN_PO_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_No__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_CN_PO_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_Remain_Amount__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_CN_Contract_Cost_Total__c - ASI_TH_CRM_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Remain Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_Start_Date__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_CN_PO_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_Version_Latest__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_CN_PO_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Version (Latest)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PO_Version__c</fullName>
        <label>PO Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PSF_End__c</fullName>
        <label>PSF End</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_CN_Period_End__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (PSF)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PSF_Start__c</fullName>
        <label>PSF Start</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_CN_Period_Start__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (PSF)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Paid_In_Progress__c</fullName>
        <label>Paid In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Paid__c</fullName>
        <label>Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payable_Amount__c</fullName>
        <label>Total Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Raised_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Payment Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_in_Progress__c</fullName>
        <label>Payment in Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Promotion_Type__c</fullName>
        <formula>TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Promotion_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_RVP_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RVP Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Reason_For_Business_License__c</fullName>
        <label>Reason For Business License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Reference_Code__c</fullName>
        <label>Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <description>Not use 
*Note by Lokman 5/30/2014</description>
        <formula>ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Amount__c</fullName>
        <label>Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestssnJX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestssnL4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestssnGJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Comments__c</fullName>
        <label>Last Returned/Rejected Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Return_Status__c</fullName>
        <label>Return Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending by User</fullName>
                </value>
                <value>
                    <fullName>Pending by Account Team</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Supplementary_Info__c</fullName>
        <label>Supplementary Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sys_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requestsfw3h</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sys_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestssmWQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Amt_Return_Amt__c</fullName>
        <formula>ASI_CRM_CN_Total_Payment__c -  ASI_CRM_CN_Return_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amt - Return Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_BRSF_Actual_Amount__c</fullName>
        <formula>ASI_CRM_CN_Adjustment__c* ASI_CRM_CN_Total_BRSF_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total BRSF Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_BRSF_Amount_Conv__c</fullName>
        <label>Total BRSF Amount (Conv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_BRSF_Amount__c</fullName>
        <label>Total BRSF Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_CN_Total_Payable__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (BRSF)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_BRSF_Suggested_Amount__c</fullName>
        <label>Total BRSF Suggested Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_CN_Suggested_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (BRSF)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Other_Amount_Conv__c</fullName>
        <label>Total Other Amount (Conv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Other_Amount__c</fullName>
        <label>Total Other Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (Other)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_PSF_Amount_Conv__c</fullName>
        <label>Total PSF Amount (Conv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_PSF_Amount__c</fullName>
        <label>Total PSF Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI CRM CN Payment Request Detail (PSF)</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Payment__c</fullName>
        <formula>If(ASI_CRM_CN_Promotion_Type__c==&apos;Heavy Contract On&apos;,ASI_CRM_Total_Actual_Amount__c,(ASI_CRM_CN_Adjustment__c* ASI_CRM_CN_Total_BRSF_Amount__c)+ ASI_CRM_CN_Total_Other_Amount__c + ASI_CRM_CN_Total_PSF_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_VEC_Amount__c</fullName>
        <label>Total VEC Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CRMPO_JDEPO__c</fullName>
        <formula>ASI_CRM_CRM_PO__c -  ASI_CRM_JDE_PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM PO - JDE PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CRM_PO__c</fullName>
        <label>CRM PO</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ASI TH CRM Payment Request Detail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_COA__c</field>
            <operation>equals</operation>
            <value>Fund - Cash, Activity - Cash</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cancelled_in_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled in JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ChequeDate__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <formula>Text( ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Commercial_Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirm_Receipt__c</fullName>
        <formula>if( ASI_CRM_Receipt_Received__c ==  ASI_CRM_Total_Payee_Line__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirm Receipt?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Exist_Before_RTM__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_CRM_Contract_Exist_Before_RTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Exist Before RTM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No_Original__c</fullName>
        <label>Contract No. (Original)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Status__c</fullName>
        <formula>IF(
AND(
TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) = &apos;Final&apos;,
!ASI_TH_CRM_Contract__r.ASI_CRM_Terminate__c,
!ASI_TH_CRM_Contract__r.ASI_CRM_Obsolete_Version__c
) 
, 
&apos;Final&apos;, 
&apos;Non-Final&apos;
)</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Days_since_Instruction_Sent__c</fullName>
        <formula>IF( NOT(ISBLANK(ASI_CRM_Latest_Instruction_Sent_Time__c)),TODAY() - DATEVALUE(ASI_CRM_Latest_Instruction_Sent_Time__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Instruction Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Entertaiment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entertainment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Entertainment_Amount__c</fullName>
        <label>Entertainment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ForAccountOf__c</fullName>
        <label>For Account Of</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GSTTaxAmount__c</fullName>
        <label>GST Tax Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_Tax_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GST_Rate__c</fullName>
        <label>GST Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generation_From_Date__c</fullName>
        <label>Generation From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generation_To_Date__c</fullName>
        <label>Generation To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Amount__c</fullName>
        <formula>ASI_TH_CRM_Total_Amount__c +  ASI_CRM_SG_GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Heap_Size_Large__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heap Size Large</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IIT_Amount__c</fullName>
        <label>IIT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Incentive</fullName>
                </value>
                <value>
                    <fullName>Other Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Afterwards__c</fullName>
        <label>Invoice Afterwards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>发票后补</fullName>
                </value>
                <value>
                    <fullName>已补发票</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDEPVNum__c</fullName>
        <label>JDE PV Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_PO__c</fullName>
        <label>JDE PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Instruction_Sent_Time__c</fullName>
        <label>Latest Instruction Sent Time</label>
        <summarizedField>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Instruction_Sent_Time__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Instruction_Sent_Time__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Comfirm_Receipt__c</field>
            <operation>notEqual</operation>
            <value>No Need Receipt</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payment_Request__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Exceed_AP_Entitled_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed A&amp;P Entitled Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Total_Adjusted_Payment__c</fullName>
        <inlineHelpText>&quot;Total Adjusted Payment&quot; against &quot;Total Entitled Payment&quot;, which excludes tax.</inlineHelpText>
        <label>Total Adjusted Payment</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_MY_Adjusted_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>